@@ -5,7 +5,7 @@ This repository contains the minecraft Mods created by the author of said reposi
 
 Currently available mods :
 1. Rgbee
-    - Current version : 0.0.3
+    - Current version : 0.0.5
     - Version name : Pollen introduction
 
 
